--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "axios": "^0.27.2",
     "vue": "^3.2.38",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
